# swc-testing

./: Cargo.toml  README.md
input/: small.js
node/: index.js  node-small.js  package-lock.json  package.json
rust/src/: main.rs
src/: main.rs  medium.js  small.js
