[package]
name = "rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rslint_parser = "0.3.1"
swc = "0.190.0"
swc_ecma_parser = "0.105.6"
swc_common = { version = "0.18.9", features = ["tty-emitter"] }
swc_ecmascript = { version = "0.165.0", features = ["codegen", "minifier", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_ecma_visit = "0.65.0"
swc_ecma_transforms = {version = "0.54.1", features = [
  "compat",
  "module",
  "optimization",
  "proposal",
  "react",
  "typescript",
]}
string_cache = "0.8.4"
tikv-jemalloc-ctl = "0.5.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
opt-level = 3
